fixed overflow on offcanvas menu

--- a/css/mobile/mobile+home.css
+++ b/css/mobile/mobile+home.css
@@ -63,6 +63,7 @@
             border: 0;
             margin: 0;
             z-index: 1;
+            overflow: auto;
         }
         .offcanvas, ul{
             width: 100%;
