--- a/css/tablet/tablet+home.css
+++ b/css/tablet/tablet+home.css
@@ -63,6 +63,7 @@
         border: 0;
         margin: 0;
         z-index: 1;
+        overflow: auto;
     }
     .offcanvas, ul{
         width: 100%;
@@ -322,6 +323,7 @@
         border: 0;
         margin: 0;
         z-index: 1;
+        overflow: auto;
     }
     .offcanvas, ul{
         width: 100%;
